# Kalshi-Trading-Bot

./: .gitignore  Makefile  README.md  analyze.py  beast_mode_bot.py  beast_mode_dashboard.py  bot.py  cleanup_old_positions.py  cli.py  env.template  getlive_eventstoday.py  kalshi-bot.service  paper_trader.py  pyproject.toml  requirements.txt  setup.py  test_poly.py  weekly_report.py
.github/workflows/: ci.yml
deploy/: install.sh  kalshi-bot.service  logrotate.conf  update.sh
scripts/: diagnose.py  health_check.py  smoke_test.py  test_sources.py
src/: __init__.py
src/ai/: decision.py  rule_engine.py
src/alerts/: discord.py
src/clients/: kalshi_client.py  openrouter_client.py  polymarket_client.py  sofascore_client.py  xai_client.py
src/config/: settings.py
src/data/: category_scanner.py  context_builder.py  economic_fetcher.py  entity_registry.py  external_markets.py  live_event_detector.py  market_data.py  news_fetcher.py  price_feeds.py  sports_data.py  sports_fetcher.py  weather_fetcher.py  web_search.py  youtube_research.py
src/execution/: live_trader.py  paper_trader.py  poly_paper_trader.py  preflight.py
src/jobs/: decide.py  evaluate.py  ingest.py  live_market_manager.py  manual_trade_monitor.py  track.py  trade.py
src/paper/: dashboard.py  tracker.py
src/risk/: manager.py  scaling.py
src/strategies/: category_scorer.py  portfolio_enforcer.py  safe_compounder.py  unified_trading_system.py
src/strategy/: arbitrage.py  opportunity.py
src/utils/: audit_log.py  confidence_calibrator.py  daily_stats.py  database.py  discord_commands.py  eastern_time.py  health_check.py  junk_filter.py  kill_switch.py  live_miss_tracker.py  logging_setup.py
tests/: test_ai_decision.py  test_arbitrage.py  test_audit_fixes.py  test_audit_fixes_2.py  test_bugs_regression.py  test_database.py  test_paper_trader.py  test_risk.py  test_safety_features.py  test_settings.py  test_strategies.py
