[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-ai-trading-bot"
version = "2.0.0"
description = "Multi-model AI trading bot for Kalshi prediction markets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kalshi AI Trading Bot Contributors"},
]
keywords = [
    "kalshi",
    "trading",
    "prediction-markets",
    "ai",
    "machine-learning",
    "multi-agent",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx==0.27.0",
    "aiohttp==3.9.1",
    "requests==2.31.0",
    "aiosqlite==0.19.0",
    "cryptography==42.0.0",
    "pycryptodome==3.20.0",
    "openai==1.51.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.12.0",
    "python-dotenv==1.0.0",
    "pydantic==2.8.2",
    "pydantic-settings",
    "structlog==23.2.0",
    "typing-extensions>=4.11",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "ratelimit==2.2.1",
    "pyyaml==6.0.1",
    "sentry-sdk==1.39.2",
    "uvicorn",
    "json-repair",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.1",
    "isort==5.13.2",
    "mypy",
]
dashboard = [
    "streamlit",
    "plotly",
]

[project.scripts]
kalshi-bot = "cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/kalshi-ai-trading-bot"
Repository = "https://github.com/yourusername/kalshi-ai-trading-bot"
Issues = "https://github.com/yourusername/kalshi-ai-trading-bot/issues"

[tool.setuptools]
py-modules = ["cli", "beast_mode_bot", "beast_mode_dashboard"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (undefined names, unused imports, etc.)
    "B",    # flake8-bugbear (common bugs: mutable defaults, loop vars, etc.)
    "S",    # flake8-bandit (security: hardcoded secrets, SQL injection, etc.)
    "UP",   # pyupgrade (modern Python idioms)
    "SIM",  # flake8-simplify (simplifiable conditions)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "S101",   # assert in tests is fine
    "S311",   # random is fine for non-crypto use
    "S603",   # subprocess is intentional in scripts
    "S607",   # partial path for subprocess is fine
    "E501",   # line length handled by formatter
    "B008",   # function calls in default args
    "S105",   # hardcoded password false positives
    "S106",
    "S107",
    "SIM108", # prefer explicit if/else
    # Typing modernisation — existing codebase uses typing.Dict/List/Optional
    "UP006", "UP007", "UP035", "UP045", "UP017", "UP041",
    # Unicode/ambiguous character warnings in comments & strings
    "RUF001", "RUF002", "RUF003",
    # try-except-pass is intentional for DB migrations and optional features
    "S110", "S112", "SIM105",
    # SQL query construction uses parameters; false positive on f-string queries
    "S608",
    # xml, md5, /tmp usage are intentional in this codebase
    "S314", "S324", "S108",
    # zip without strict= is fine for our use cases
    "B905",
    # Mutable class attr default — intentional in some data classes
    "RUF012",
    # implicit Optional in annotations — existing style
    "RUF013",
    # Unused local variables — too many in existing codebase; tracked separately
    "F841",
    # Loop variable binding — closures in async loops; intentional patterns
    "B023",
    # File open without context manager — legacy code
    "SIM115",
    # SIM114 combine if-branches — prefer explicit for readability
    "SIM114", "SIM102",
    # RUF059 unpacked variable unused — intentional destructuring
    "RUF059",
    # UP032 use f-string — existing .format() calls
    "UP032",
    # E7xx style — multiple statements on one line are used for compact guard clauses
    "E701", "E702",
    # E402 module-level imports not at top — some conditional imports are intentional
    "E402",
    # E741 ambiguous variable names — 'l' used as loop var in some places
    "E741",
    # RUF046 int() of int — false positive in some contexts
    "RUF046",
    # RUF034 useless if-else — keep explicit
    "RUF034",
    # RUF021 parenthesize chained and/or — readability preference
    "RUF021",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]   # security and bugbear rules too strict in tests
